<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main3Activity">

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_first_name"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="70dp" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
       android:hint="@string/register_last_name"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="151dp" />

    <EditText
        android:id="@+id/register_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_weight="1"
        android:hint="@string/register_birthday"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_weight="1"
        android:hint="@string/register_email"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="330dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
       android:hint="@string/register_password"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/register_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register_submit" />
</LinearLayout>