<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_screen_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_weight="0.4"
        />

    <EditText
        android:id="@+id/welcome_screen_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/welcome_screen_username_label"
        tools:layout_editor_absoluteX="84dp"
        android:textSize="30dp"
        tools:layout_editor_absoluteY="174dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/welcome_screen_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30dp"
        android:hint="@string/welcome_screen_password_label"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="249dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/welcome_screen_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/welcome_screen_login_button"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="326dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/welcome_screen_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/welcome_screen_register_button"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="326dp"
        android:layout_weight="1"/>

</LinearLayout>